--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="author" content="Steven">
   <meta name="viewport" content="width=device-width" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
-  <title>GYF1 - Steven - 郭银锋</title>
+  <title>Steven - GYF1 - 郭银锋</title>
   <link rel="shortcut icon" href="img/favicon.ico">
   <link rel="stylesheet" href="css/style.css"/>
   <link rel="stylesheet" href="css/google.css"/>
@@ -94,7 +94,7 @@
         <div class="_dQc _E2" id="fbar">
           <div class="fbar" style="text-align: left;">
                         <span id="fsr">
-                            <p id="cp">©2015&nbsp;GYF1&nbsp;<a href="http://gyf1.com">郭银锋</a>&nbsp;沪ICP备14054462号&nbsp;
+                            <p id="cp">©2015&nbsp;GYF1&nbsp;<a href="http://gyf1.com">Steven 郭银锋</a>&nbsp;<a target="_blank" href="http://www.miitbeian.gov.cn">沪ICP备14054462号</a>&nbsp;
                             </p>
                         </span>
                         <span id="fsl">
