--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                             </p>
                         </span>
                         <span id="fsl">
-                            <a class="_Gs" href="http://i.gyf1.com" target="_blank">
+                            <a class="_Gs" href="http://i.gyf1.com" target="_blank" title=" Collection of web sites that web developers should know ">
                               WebForce
                             </a>
                         </span>
