--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
                             </p>
                         </span>
                         <span id="fsl">
-                            <a class="_Gs" href="http://i.gyf1.com" target="_blank" title=" Collection of web sites that web developers should know ">
-                              WebForce
+                            <a class="_Gs" href="http://gyf1.com/websites/" target="_blank" title=" Collection of web sites that web developers should know ">
+                              WebSites
                             </a>
                         </span>
           </div>
