--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="description" content="Web Platform, Cloud and Mobile Application Development">
   <meta name="keywords" content="JavaScript/CSS/HTML">
   <meta name="author" content="Steven">
-  <meta name="viewport" content="width=device-width" />
-  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="viewport" content="width=device-width"/>
+  <meta name="apple-mobile-web-app-capable" content="yes"/>
   <title>Steven - GYF1 - 郭银锋</title>
   <link rel="shortcut icon" href="img/favicon.ico">
   <link rel="stylesheet" href="css/style.css"/>
@@ -24,12 +24,6 @@
               <a class="gbzt" href="http://gyf1.com/">
                 <span class="gbtb2"></span>
                 <span class="gbts">GYF1.COM</span>
-              </a>
-            </li>
-            <li class="gbt">
-              <a class="gbzt" href="http://blog.gyf1.com">
-                <span class="gbtb2"></span>
-                <span class="gbts">Blog</span>
               </a>
             </li>
             <li class="gbt">
@@ -65,9 +59,9 @@
             <li class="gbt">
               <a target="_top" href="gyf1.com" class="gbgt">
                 <span class="gbtb2"></span>
-                                <span id="gbgs4" class="gbts">
-                                    <span id="gbi4s1">登录</span>
-                                </span>
+                <span id="gbgs4" class="gbts">
+                  <span id="gbi4s1">登录</span>
+                </span>
               </a>
             </li>
             <li class="gbt gbtb">
@@ -93,15 +87,20 @@
 
         <div class="_dQc _E2" id="fbar">
           <div class="fbar" style="text-align: left;">
-                        <span id="fsr">
-                            <p id="cp">©2015&nbsp;GYF1&nbsp;<a href="http://gyf1.com">Steven 郭银锋</a>&nbsp;<a target="_blank" href="http://www.miitbeian.gov.cn">沪ICP备14054462号</a>&nbsp;
-                            </p>
-                        </span>
-                        <span id="fsl">
-                            <a class="_Gs" href="http://gyf1.com/websites/" target="_blank" title=" Collection of web sites that web developers should know ">
-                              WebSites
-                            </a>
-                        </span>
+            <span id="fsr">
+                <p id="cp">©2015&nbsp;GYF1&nbsp;<a href="http://gyf1.com">Steven 郭银锋</a>&nbsp;<a
+                    target="_blank" href="http://www.miitbeian.gov.cn">沪ICP备14054462号</a>&nbsp;
+                </p>
+            </span>
+            <span id="fsl">
+              <a class="_Gs" href="http://gyf1.com/blog/" target="_blank" title="My Blog">
+                Blog
+              </a>
+                <a class="_Gs" href="http://gyf1.com/websites/" target="_blank"
+                   title=" Collection of web sites that web developers should know ">
+                  WebSites
+                </a>
+            </span>
           </div>
         </div>
       </div>
