--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->  
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->  
 <head>
-    <title>Unify | Creative One Page Theme</title>
+    <title>GYF1.COM</title>
 
     <!-- Meta -->
     <meta charset="utf-8">
@@ -56,7 +56,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                 </button>
                 
                 <a class="navbar-brand" href="#intro">
-                    <span>U</span>nify
+                    GYF<span>1</span>
                     <!-- <img src="assets/img/logo1.png" alt="Logo"> -->
                 </a>
             </div>
