--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                             data-start="2000"
                             data-easing="Back.easeInOut"
                             data-endspeed="300">
-                            WE ARE UNIFY CREATIVE TECHNOLOGY COMPANY
+                            WE LIVE AND BREATHE CODE.
                         </div>
 
                         <!-- LAYER -->
@@ -290,8 +290,8 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
         <div class="about-image bg-grey">
             <div class="container">
                 <div class="title-v1">
-                    <h1>We are Unify Agency</h1>
-                    <p>Unify <strong>creative</strong> technology company providing key digital services. <br> 
+                    <h1>We are GYF1 Agency</h1>
+                    <p>GYF1 <strong>creative</strong> technology company providing key digital services. <br>
                     Focused on helping our clients to build a <strong>successful</strong> business on web and mobile.</p>                
                 </div>
                 <div class="img-center">
@@ -393,7 +393,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         </div>
                         <h3>David Case</h3>
                         <h4>/ Web Developer</h4>
-                        <p>Web Developer in Unify agency porta gravida at eget metus id elit...</p>
+                        <p>Web Developer in GYF1 agency porta gravida at eget metus id elit...</p>
                     </li>
                     <li class="col-sm-3 col-xs-6">
                         <div class="team-img">
@@ -532,7 +532,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
             <div class="container">
                 <div class="call-action-v1-box">
                     <div class="call-action-v1-in">
-                        <p>Unify creative technology company providing key digital services and focused on helping our clients to build a successful business on web and mobile.</p>
+                        <p>GYF1 creative technology company providing key digital services and focused on helping our clients to build a successful business on web and mobile.</p>
                     </div>
                     <div class="call-action-v1-in inner-btn page-scroll">
                         <a href="#portfolio" class="btn-u btn-brd btn-brd-hover btn-u-dark btn-u-block">View Our Portfolio</a>
@@ -605,7 +605,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     <div class="col-md-8 col-md-offset-2">
                         <ul class="list-unstyled owl-twitter-v1">
                             <li class="item">
-                                <p>Unify has reached 10000 plus sales and we just want to thank you to our all customers for being part of the Unify Template success <a href="http://bit.ly/1c0UN3Y">http://bit.ly/1c0UN3Y</a><p>
+                                <p>GYF1 has reached 10000 plus sales and we just want to thank you to our all customers for being part of the GYF1 Template success <a href="http://bit.ly/1c0UN3Y">http://bit.ly/1c0UN3Y</a><p>
                                 <span>3 min ago via <a href="https://twitter.com/htmlstream">@htmlstream</a></span>
                             </li>
                             <li class="item">
@@ -822,7 +822,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                                     <p>David Case</p>
                                     <span>Web Developer, Google</span>
                                 </div>
-                                <p>I just wanted to tell you how much I like to use Unify - <strong>it's so sleek and elegant!</strong> <br>
+                                <p>I just wanted to tell you how much I like to use GYF1 - <strong>it's so sleek and elegant!</strong> <br>
                                 The customisation options you implemented are countless, and I feel sorry I can't use them all. Good job, and keep going!<p>
                             </li>
                             <li class="item">
@@ -911,7 +911,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
         </div>
 
         <div class="copyright-section">
-            <p>2014 &copy; All Rights Reserved. Unify Theme by <a target="_blank" href="https://twitter.com/htmlstream">Htmlstream</a></p>
+            <p>2014 &copy; All Rights Reserved. GYF1 Theme by <a target="_blank" href="https://twitter.com/htmlstream">Htmlstream</a></p>
             <ul class="social-icons">
                 <li><a href="#" data-original-title="Facebook" class="social_facebook rounded-x"></a></li>
                 <li><a href="#" data-original-title="Twitter" class="social_twitter rounded-x"></a></li>
