--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
   <meta name="apple-mobile-web-app-capable" content="yes"/>
   <title>Steven - GYF1.COM - 郭银锋</title>
   <link rel="shortcut icon" href="img/favicon.ico">
-  <link rel="stylesheet" href="css/style.css"/>
   <link rel="stylesheet" href="css/google.css"/>
 </head>
-<body onload="new Rubik()">
+<body>
 <div class="ctr-p" id="viewport">
   <div data-jibp="" id="mngb">
     <div id="gb">
@@ -58,36 +57,16 @@
             </li>
           </ol>
         </div>
-        <div id="gbg" style="display: none;">
-          <h2 class="gbxx">Account Options</h2>
-          <span class="gbtcb"></span>
-          <ol class="gbtc">
-            <li class="gbt">
-              <a target="_top" href="gyf1.com" class="gbgt">
-                <span class="gbtb2"></span>
-                  <span id="gbgs4" class="gbts">
-                    <span id="gbi4s1">登录</span>
-                  </span>
-              </a>
-            </li>
-            <li class="gbt gbtb">
-              <span class="gbts"></span>
-            </li>
-            <li class="gbt">
-              <a class="gbgt" id="gbg5" href="http://gyf1.com/preferences?hl=zh-CN"
-                 title="选项" onclick="gbar.tg(event,this)" aria-haspopup="true"
-                 aria-owns="gbd5"><span class="gbtb2"></span><span id="gbgs5"
-                                                                   class="gbts"><span
-                  id="gbi5"></span></span></a>
-            </li>
-          </ol>
-        </div>
       </div>
       <div id="gbx3"></div>
       <div id="gbx4"></div>
     </div>
   </div>
   <div class="content" data-jiis="cc" id="main">
+    <div style="margin-top: 190px;text-align: center;">
+      <img src="img/logo-square.png">
+      <h1>Web Platform, Cloud and Mobile Application Development</h1>
+    </div>
     <div class="ctr-p" data-jiis="bp" id="footer">
       <div id="footcnt">
 
@@ -114,9 +93,5 @@
   </div>
 </div>
 
-<script src="js/oz.js"></script>
-<script src="js/css3.oz.js"></script>
-<script src="js/rubik.js"></script>
-<script src="js/quaternion.js"></script>
 </body>
 </html>
