--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="author" content="Steven">
   <meta name="viewport" content="width=device-width"/>
   <meta name="apple-mobile-web-app-capable" content="yes"/>
-  <title>Steven - GYF1.COM - 郭银锋</title>
+  <title>I'm Steven</title>
   <link rel="shortcut icon" href="img/favicon.ico">
   <link rel="stylesheet" href="css/google.css"/>
 </head>
@@ -63,7 +63,7 @@
     </div>
   </div>
   <div class="content" data-jiis="cc" id="main">
-    <div style="margin-top: 190px;text-align: center;">
+    <div style="margin-top: 190px;min-height:500px;text-align: center;">
       <img src="img/logo-square.png">
       <h1>Web Platform, Cloud and Mobile Application Development</h1>
     </div>
