--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
               </a>
             </li>
             <li class="gbt">
-              <a class="gbzt" href="http://codepen.io">
+              <a class="gbzt" href="http://codepen.io" target="_blank">
                 <span class="gbtb2"></span>
                 <span class="gbts">CodePen</span>
               </a>
             </li>
             <li class="gbt">
-              <a class="gbzt" href="http://stackoverflow.com">
+              <a class="gbzt" href="http://stackoverflow.com" target="_blank">
                 <span class="gbtb2"></span>
                 <span class="gbts">Stack Overflow</span>
               </a>
             </li>
             <li class="gbt">
-              <a class="gbzt" href="http://segmentfault.com/u/gyf1">
+              <a class="gbzt" href="http://segmentfault.com/u/gyf1" target="_blank">
                 <span class="gbtb2"></span>
                 <span class="gbts">SegmentFault</span>
               </a>
