--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="author" content="Steven">
   <meta name="viewport" content="width=device-width"/>
   <meta name="apple-mobile-web-app-capable" content="yes"/>
-  <title>I'm Steven</title>
+  <title>GYF1.COM - I'm Steven</title>
   <link rel="shortcut icon" href="img/favicon.ico">
   <link rel="stylesheet" href="css/google.css"/>
 </head>
