--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               </a>
             </li>
             <li class="gbt">
-              <a class="gbzt" target="_blank" href="https://trello.com/b/VWUyJV9U/steven-development">
+              <a class="gbzt" target="_blank" href="https://trello.com/">
                 <span class="gbtb2"></span>
                 <span class="gbts">Trello</span>
               </a>
