--- a/index.html
+++ b/index.html
@@ -1,96 +1,32 @@
 <!DOCTYPE html>
-<html>
-<head lang="en">
+<html lang="en" class="no-js">
+<head>
   <meta charset="UTF-8">
   <meta name="description" content="Web Platform, Cloud and Mobile Application Development">
   <meta name="keywords" content="JavaScript/CSS/HTML">
   <meta name="author" content="Steven">
   <meta name="viewport" content="width=device-width"/>
-  <meta name="apple-mobile-web-app-capable" content="yes"/>
   <title>GYF1.COM - I'm Steven</title>
   <link rel="shortcut icon" href="img/favicon.ico">
-  <link rel="stylesheet" href="css/google.css"/>
+  <link rel="stylesheet" type="text/css" href="assets/css/normalize.css" />
+  <link rel="stylesheet" type="text/css" href="assets/css/demo.css" />
+  <link rel="stylesheet" type="text/css" href="assets/css/component.css" />
+  <!--[if IE]>
+  <script src="assets/js/html5.js"></script>
+  <![endif]-->
 </head>
 <body>
-<div class="ctr-p" id="viewport">
-  <div data-jibp="" id="mngb">
-    <div id="gb">
-      <div id="gbw">
-        <div id="gbz">
-          <span class="gbtcb"></span>
-          <ol id="gbzc" class="gbtc">
-            <li class="gbt">
-              <a class="gbzt" href="http://gyf1.com/">
-                <span class="gbtb2"></span>
-                <span class="gbts">GYF1.COM</span>
-              </a>
-            </li>
-            <li class="gbt">
-              <a class="gbzt" href="https://github.com/gyf1" target="_blank">
-                <span class="gbtb2"></span>
-                <span class="gbts">GitHub</span>
-              </a>
-            </li>
-            <li class="gbt">
-              <a class="gbzt" href="http://codepen.io" target="_blank">
-                <span class="gbtb2"></span>
-                <span class="gbts">CodePen</span>
-              </a>
-            </li>
-            <li class="gbt">
-              <a class="gbzt" href="http://stackoverflow.com" target="_blank">
-                <span class="gbtb2"></span>
-                <span class="gbts">Stack Overflow</span>
-              </a>
-            </li>
-            <li class="gbt">
-              <a class="gbzt" href="http://segmentfault.com/u/gyf1" target="_blank">
-                <span class="gbtb2"></span>
-                <span class="gbts">SegmentFault</span>
-              </a>
-            </li>
-            <li class="gbt">
-              <a class="gbzt" target="_blank" href="https://trello.com/">
-                <span class="gbtb2"></span>
-                <span class="gbts">Trello</span>
-              </a>
-            </li>
-          </ol>
-        </div>
-      </div>
-      <div id="gbx3"></div>
-      <div id="gbx4"></div>
+<div class="container demo-1">
+  <div class="content">
+    <div id="large-header" class="large-header">
+      <canvas id="demo-canvas"></canvas>
+      <h1 class="main-title">Steven <span class="thin">塞翁</span></h1>
     </div>
   </div>
-  <div class="content" data-jiis="cc" id="main">
-    <div style="margin-top: 190px;min-height:390px;text-align: center;">
-      <img src="img/logo-square.png">
-      <h1>Web Platform, Cloud and Mobile Application Development</h1>
-    </div>
-    <div class="ctr-p" data-jiis="bp" id="footer">
-      <div id="footcnt">
-
-        <div class="_dQc _E2" id="fbar">
-          <div class="fbar" style="text-align: left;">
-              <span id="fsr">
-                  <p id="cp">©2015&nbsp;GYF1&nbsp;<a href="http://gyf1.com">Steven 郭银锋</a>&nbsp;<a
-                      target="_blank" href="http://www.miitbeian.gov.cn">沪ICP备14054462号</a>&nbsp;
-                  </p>
-              </span>
-              <span id="fsl">
-                <a class="_Gs" href="http://gyf1.com/blog/" target="_blank" title="My Blog">
-                  Blog
-                </a>
-                  <a class="_Gs" href="http://gyf1.com/websites/" target="_blank"
-                     title=" Collection of web sites that web developers should know ">
-                    WebSites
-                  </a>
-              </span>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+</div><!-- /container -->
+<script src="assets/js/TweenLite.min.js"></script>
+<script src="assets/js/EasePack.min.js"></script>
+<script src="assets/js/rAF.js"></script>
+<script src="assets/js/demo-1.js"></script>
 </body>
 </html>
