--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" class="no-js">
-<head>
+<html>
+<head lang="en">
   <meta charset="UTF-8">
   <meta name="description" content="Web Platform, Cloud and Mobile Application Development">
   <meta name="keywords" content="JavaScript/CSS/HTML">
@@ -8,25 +8,23 @@
   <meta name="viewport" content="width=device-width"/>
   <title>GYF1.COM - I'm Steven</title>
   <link rel="shortcut icon" href="img/favicon.ico">
-  <link rel="stylesheet" type="text/css" href="assets/css/normalize.css" />
-  <link rel="stylesheet" type="text/css" href="assets/css/demo.css" />
-  <link rel="stylesheet" type="text/css" href="assets/css/component.css" />
-  <!--[if IE]>
-  <script src="assets/js/html5.js"></script>
-  <![endif]-->
+  <link rel="stylesheet" href="css/20150529.css">
 </head>
 <body>
-<div class="container demo-1">
-  <div class="content">
-    <div id="large-header" class="large-header">
-      <canvas id="demo-canvas"></canvas>
-      <h1 class="main-title">Steven <span class="thin">塞翁</span></h1>
+<header id="home" class="hero">
+  <div class="pattern-overlay"></div>
+  <div class="hero-body">
+    <div class="hero-text text-center">
+      <h1>Steven 塞翁</h1>
+      <h3>Web Platform, Cloud and Mobile Application Development</h3>
     </div>
   </div>
-</div><!-- /container -->
-<script src="assets/js/TweenLite.min.js"></script>
-<script src="assets/js/EasePack.min.js"></script>
-<script src="assets/js/rAF.js"></script>
-<script src="assets/js/demo-1.js"></script>
+</header>
+<ul class="navbar">
+  <li><a href="http://gyf1.com/blog" title="My Blog">Blog</a></li>
+  <li><a href="http://github.com/gyf1" title="My Blog">GitHub</a></li>
+  <li><a href="http://gyf1.com/websites" title=" Collection of web sites that web developers should know ">WebSites</a>
+  </li>
+</ul>
 </body>
 </html>
