--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="css/20150529.css">
 </head>
 <body>
-<header id="home" class="hero">
+<header class="hero">
   <div class="pattern-overlay"></div>
   <div class="hero-body">
     <div class="hero-text text-center">
