--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <title>GYF1.COM - I'm Steven</title>
   <link rel="shortcut icon" href="img/favicon.ico">
   <link rel="stylesheet" href="css/20150529.css">
+  <!--[if IE]>
+  <script src="asserts/js/html5.js"></script>
+  <![endif]-->
 </head>
 <body>
 <header class="hero">
