--- a/index.html
+++ b/index.html
@@ -34,5 +34,13 @@
   document.getElementById('header').style.height = document.body.clientHeight - 65 + 'px';
 </script>
 <![endif]-->
+<script>
+  (function () {
+    var imageCount = Math.floor(Math.random() * ( 3 + 1));
+    var header = document.getElementsByTagName('header')[0];
+    var imageURL = 'http://gyf1.com/img/me' + imageCount + '.jpg'
+    header.style.backgroundImage = 'url(' + imageURL + ')';
+  }());
+</script>
 </body>
 </html>
