--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
   (function () {
     var imageCount = Math.floor(Math.random() * ( 3 + 1));
     var header = document.getElementsByTagName('header')[0];
+    imageCount = imageCount === 0 ? imageCount + 1 : imageCount;
     var imageURL = 'http://gyf1.com/img/me' + imageCount + '.jpg'
     header.style.backgroundImage = 'url(' + imageURL + ')';
   }());
