--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <div class="pattern-overlay"></div>
   <div class="hero-body">
     <div class="hero-text text-center">
-      <h1>Steven 塞翁</h1>
-      <h3>Web Platform, Cloud and Mobile Application Development</h3>
+      <h1 class="title">Steven <span class="chinese-name">塞翁</span></h1>
+      <p class="subtitle">Web Platform, Cloud and Mobile Application Development</p>
     </div>
   </div>
 </header>
