--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 <ul class="navbar">
   <li><a href="http://gyf1.com/blog" title="My Blog">Blog</a></li>
   <li><a href="http://github.com/gyf1" title="My Blog">GitHub</a></li>
-  <li><a href="http://gyf1.com/websites" title="Collection of web sites that web developers should know ">WebSites</a>
+  <li><a href="http://gyf1.com/websites" title="Collection of web sites that web developers should know">WebSites</a>
+  <li><a href="http://gyf1.com/resume" title="My Resume">Resume</a>
   </li>
 </ul>
 <!--[if IE]>
