chore(cname):change domain to saiweng.me

--- a/indexa.html
+++ b/indexa.html
@@ -6,7 +6,7 @@
   <meta name="keywords" content="JavaScript/CSS/HTML">
   <meta name="author" content="Steven">
   <meta name="viewport" content="width=device-width"/>
-  <title>GYF1.COM - I'm Steven</title>
+  <title>I'm Steven</title>
   <link rel="shortcut icon" href="img/favicon.ico">
   <link rel="stylesheet" type="text/css" href="asserts/css/normalize.css" />
   <link rel="stylesheet" type="text/css" href="asserts/css/demo.css" />
