--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="keywords" content="JavaScript/CSS/HTML">
   <meta name="author" content="Steven">
   <meta name="viewport" content="width=device-width"/>
-  <title>GYF1.COM - I'm Steven</title>
+  <title>I'm Steven</title>
   <link rel="shortcut icon" href="img/favicon.ico">
   <link rel="stylesheet" href="css/20150529.css">
   <!--[if IE]>
@@ -24,10 +24,9 @@
   </div>
 </header>
 <ul class="navbar">
-  <li><a href="http://gyf1.com/blog" title="My Blog">Blog</a></li>
-  <li><a href="http://github.com/gyf1" title="My Blog">GitHub</a></li>
-  <li><a href="http://gyf1.com/websites" title="Collection of web sites that web developers should know">WebSites</a>
-  <!--<li><a href="http://gyf1.com/resume" title="My Resume">Resume</a>-->
+  <li><a href="http://saiweng.com/blog" title="My Blog">Blog</a></li>
+  <li><a href="http://github.com/guoyinfeng" title="My Github">GitHub</a></li>
+  <li><a href="http://saiweng.mem/websites" title="Collection of web sites that web developers should know">WebSites</a>
   </li>
 </ul>
 <!--[if IE]>
@@ -40,7 +39,7 @@
     var imageCount = Math.floor(Math.random() * ( 21 + 1));
     var header = document.getElementsByTagName('header')[0];
     imageCount = imageCount === 0 ? imageCount + 1 : imageCount;
-    var imageURL = 'http://gyf1.com/img/me' + imageCount + '.jpg'
+    var imageURL = 'http://saiweng.me/img/me' + imageCount + '.jpg'
     header.style.backgroundImage = 'url(' + imageURL + ')';
   }());
 </script>
