fix(domain):update new domain

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
   </div>
 </header>
 <ul class="navbar">
-  <li><a href="http://saiweng.com/blog" title="My Blog">Blog</a></li>
+  <li><a href="http://saiweng.me/blog" title="My Blog">Blog</a></li>
   <li><a href="http://github.com/guoyinfeng" title="My Github">GitHub</a></li>
-  <li><a href="http://saiweng.mem/websites" title="Collection of web sites that web developers should know">WebSites</a>
+  <li><a href="http://saiweng.me/websites" title="Collection of web sites that web developers should know">WebSites</a>
   </li>
 </ul>
 <!--[if IE]>
